🐞 fix: overflow hidden

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,4 +13,5 @@ body {
   background: #121316;
   color: #fafafa;
   font-family: "Josefin Sans", serif;
+  overflow: hidden;
 }
